--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
     <div class="container-QRCode">
         <div class="text-center">
             <a href="game.html">
-                <img src="assets/img/frame.png">
+
+                <img src="assets/img/frame.png" height="250px" width="200px">
             </a>
         </div>
 
